<resources>
    <string name="app_name">My Pokedex</string>
    <string name="nav_drawer_menu_home">Home</string>
    <string name="nav_drawer_menu_favorites">Favorites</string>
    <string name="nav_drawer_menu_settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about">About</string>
    <string name="defence">Defence</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="abilities">Abilities</string>
    <string name="base_exp">Base Exp</string>
    <string name="base_stats">Base Stats</string>
    <string name="hp">Hp</string>
    <string name="attack">Attack</string>
    <string name="special_attack">Special Attack</string>
    <string name="special_defence">Special Defence</string>
    <string name="speed">Speed</string>
    <string name="title_favorite">Module Title</string>
    <string name="search">Search</string>
    <string name="my_pokedex_n_v1_0">My Pokedex \n v1.0</string>
</resources>